<resources>
    <string name="app_name">PROJFLIX</string>
    <string name="Sign_in">Sign In</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Verify_password">Verify Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="New_to_Netflix">New to Netflix?</string>
    <string name="Log_in">Log in</string>
    <string name="Username">Username</string>
    <string name="profile_picture">profile picture</string>
    <string name="go_back">go back</string>
    <string name="movie_image_description">Movie poster button</string>
    <string name="mute_button">mute button</string>
    <string name="unmute_button">unmute button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_active">HomeActive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="back">back</string>
    <string name="all_movies">all movies</string>
    <string name="categories">Categories</string>
    <string name="admin">admin</string>
    <string name="director">Director</string>
    <string name="cast">Cast</string>
    <string name="realese_year">Realese year</string>
    <string name="playing_movie">Playing movie...</string>
    <string name="play">Play</string>
    <string name="similar_movies">Similar movies</string>
    <string name="movie_name">Movie name</string>
    <string name="duration">Duration</string>
    <string name="description">Description</string>
    <string name="categories_format">Categories (format:Drama,Action ...)</string>
    <string name="cast_format">Cast(format:Avi,Dani ...)</string>
    <string name="select_image">Select Image</string>
    <string name="select_movie_file">Select movie file</string>
    <string name="select_trailer">Select trailer</string>
    <string name="category_name">Category name</string>
    <string name="promoted">Promoted</string>
    <string name="Sign_out">Sign Out</string>
    <string-array name="spinner_options">
        <item>Categories</item>
        <item>Movies</item>
    </string-array>
    <string name="Watch_everywhere">Watch everywhere</string>
    <string name="app_des">Stream on your phone, tablet, laptop, and TV</string>
    <string name="profile_select">Select Profile Image</string>
    <string name="add_movie">Add Movie</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="add">Add\n</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="image_selected">Image Selected</string>
    <string name="movie_video_selected">"Movie video selected: "</string>
    <string name="trailer_selected">"Trailer selected: "</string>
    <string name="invalid_file_selected">Invalid File selected</string>
    <string name="permission_denied">Permission denied</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="close_button">close button</string>
</resources>