<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextMovieName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/movie_name"
        android:inputType="text"/>  

    <EditText
        android:id="@+id/editTextMovieMinutes"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/duration"
        android:inputType="text"/>   

    <EditText
        android:id="@+id/editTextMovieYear"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/realese_year"
        android:inputType="number"/>   

    <EditText
        android:id="@+id/editTextMovieDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/description"
        android:inputType="text" />  

    <EditText
        android:id="@+id/editTextMovieCategories"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/categories_format"
        android:inputType="text"/>    

    <EditText
        android:id="@+id/editTextMovieCast"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/cast_format"
        android:inputType="text" />  

    <EditText
        android:id="@+id/editTextMovieDirector"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/director"
        android:inputType="text" />  


    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image" />

    <Button
        android:id="@+id/selectVideoMovieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_movie_file" />

    <Button
        android:id="@+id/selectVideoTrailerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_trailer" />

</LinearLayout>
